# AndroidMigrate

./: .gitignore  LICENSE  PLAN.md  README.md  TUI_PLAN.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
packaging/aur/: .SRCINFO  PKGBUILD
packaging/homebrew/: androidmigrate.rb
scripts/: backup_folder.py
src/androidmigrate/: __init__.py  cli.py  config.py  mirror_path.py  models.py  root_manager.py  storage.py  sync_engine.py  transport.py  tui.py  tui_render.py
tests/: test_config.py  test_create_profile.py  test_mirror_path.py  test_root_manager.py  test_sync_engine.py  test_transport.py  test_tui_render.py
